# kami-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  docker-smoke.yml  live-harness-smoke.yml
docs/: packaging.md
manifests/: example.yaml
prompts/: continue.txt  kickoff.txt  system.txt
schema/: telemetry.json
src/kami_agent/: __init__.py  cli.py  governor.py  harness.py  loop.py  repetition.py  runner.py  state.py  supervisor.py  telemetry.py
src/kami_agent/adapters/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/kami_agent/schema/: telemetry.json
src/kami_agent/tools/: __init__.py  errors.py  sandbox.py  scaffold.py  truncation.py
tests/cron_smoke/: check_telemetry.py  stub_session.py
tests/smoke/: conftest.py  test_tri_provider.py
tests/smoke/fixtures/: harness_tools.json
tests/unit/: fake_mcp_server.py  test_adapter_types.py  test_anthropic_adapter.py  test_cli.py  test_google_adapter.py  test_governor.py  test_harness_client.py  test_imports.py  test_loop.py  test_openai_adapter.py  test_prompts.py  test_provider_state.py  test_repetition.py  test_runner.py  test_sandbox.py  test_scaffold_tools.py  test_state.py  test_supervisor.py  test_telemetry.py  test_truncation.py
tests/unit/fixtures/anthropic/: cached_usage.json  max_tokens.json  parallel_tool_use.json  refusal.json  text_end_turn.json  thinking_tool_use.json
tests/unit/fixtures/google/: cached_usage.json  max_tokens.json  parallel_function_calls.json  safety.json  text_stop.json  thinking_fold.json  thought_signature.json
tests/unit/fixtures/openai/: cached_usage.json  content_filter.json  length.json  parallel_tool_calls.json  reasoning_usage.json  text_stop.json
