[project]
name = "kami-agent"
version = "0.0.1"
description = "Model-agnostic reference agent scaffold for KamiBench"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anatoly Zaytsev (tokedo)" }]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kami_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
