[project]
name = "kami-agent"
version = "0.0.1"
description = "Model-agnostic reference agent scaffold for KamiBench"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anatoly Zaytsev (tokedo)" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79",
    "google-genai>=1.0",
    "httpx>=0.27",
    "openai>=1.60",
    "mcp>=1.9",
    "eth-account>=0.11",
    "jsonschema>=4.18",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6",
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
kami-agent = "kami_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kami_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The frozen prompt strings are compared byte-exact; their lines can't wrap.
"tests/unit/test_prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
